--- a/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
+++ b/src/main/resources/templates/views/opn/srv/OPNSRV003M0.html
@@ -253,7 +253,7 @@
           validator: createValidator,
           width: 120,
           headerCssClass: "slick-header-columns",
-          cssClass: "slick-column-center",
+          cssClass: "slick-column-right",
           formatter: numberFormatter,
         },
         {
