페이지 타이틀 수정

--- a/src/main/resources/templates/fragments/head.html
+++ b/src/main/resources/templates/fragments/head.html
@@ -9,7 +9,7 @@
 		<meta name="_csrf_parameter" th:content="${csrfParameterName}">
 		<meta name="_csrf_header" th:content="${csrfHeaderName}">
 		
-		<title th:text="${menuNm}"></title>
+		<title>iFrame 2.0 - Cloud IFRS17 Closing Services</title>
 		
 		<link rel="stylesheet" href="css/jquery-ui-1.13.3/jquery-ui.css" type="text/css" />
 		<link rel="stylesheet" href="js/slickgrid/dist/styles/css/slick.grid.css" type="text/css" />
