--- a/src/main/resources/templates/fragments/header.html
+++ b/src/main/resources/templates/fragments/header.html
@@ -4,7 +4,7 @@
 		<div class="container-xl">
 			<div class="navbar-nav align-items-center flex-row order-md-last">
 				<span style="padding-left:30px;">
-				<a href="#!" class="link-light" style="text-decoration: none;" onClick="goMenuPage('/views/user/myPage')">
+				<a href="#!" class="link-light" style="text-decoration: none;" onClick="goMenuPage('views/user/myPage')">
 					<svg xmlns="http://www.w3.org/2000/svg" width="24" height="24" viewBox="0 0 24 24" fill="none" stroke="currentColor" stroke-width="2" stroke-linecap="round" stroke-linejoin="round" class="icon icon-tabler icons-tabler-outline icon-tabler-user-square-rounded"><path stroke="none" d="M0 0h24v24H0z" fill="none"/><path d="M12 13a3 3 0 1 0 0 -6a3 3 0 0 0 0 6z" /><path d="M12 3c7.2 0 9 1.8 9 9s-1.8 9 -9 9s-9 -1.8 -9 -9s1.8 -9 9 -9z" /><path d="M6 20.05v-.05a4 4 0 0 1 4 -4h4a4 4 0 0 1 4 4v.05" /></svg>
 					Mypage
 				</a>
@@ -63,7 +63,7 @@
 		                        
 		                        // /login 페이지로 이동
 		                        $("input[name='CSRF_TOKEN']").val(newCsrfToken);  // th:name="CSRF_TOKEN"태크의 csrf 토큰 값을 업데이트
-		                        $("#pageName").val("/login");  // 이동할 페이지 설정
+		                        $("#pageName").val("login");  // 이동할 페이지 설정
 							    $("#form").submit();  // 폼 전송
 		                    });
 						}
